--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.klinkerapps:android-smsmms:5.2.6'
-    compile 'net.rimoto:intlphoneinput:1.0.1'
+    implementation 'com.hbb20:ccp:2.0.3'
+    implementation 'com.google.code.gson:gson:2.8.5'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.google.android.exoplayer:exoplayer:r2.3.1'
 
